fixed the z-index property on the navigation ba r and the commodity components

--- a/src/index.css
+++ b/src/index.css
@@ -30,8 +30,7 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: var(--secondary);
-  color: var(--text-strong);
+  padding: 150px 0 0 0;
 
 }
 
